SERVER-78103 Fix clustered coll $_resumeAfter: {$recordId: null} in SBE